@@ -321,7 +321,7 @@
 	<target name="buildDocJar" depends="docbook">
 		<delete file="${output.lib.dir}/${app.name}doc.jar" />
 		<jar destfile="${output.lib.dir}/${app.name}doc.jar">
-			<fileset dir="${tmp.dir}" excludes="**/*.pdf, **/${docbook.name}-current.html, **/api/**, **/docbook/**" />
+			<fileset dir="${tmp.dir}" excludes="**/${docbook.name}.*, **/*.pdf, **/${docbook.name}-current.html, **/api/**, **/docbook/**" />
 		</jar>
 	</target>
 
