@@ -633,9 +633,6 @@ configure -version    - Sets the version number for the project.
 configure -release    - Sets the release number for the project.
 configure -jdkhome    - Sets the "JAVA HOME" location of Java to be used 
                         to compile the project.
-configure -debug      - Flag that determines if the sources will be 
-                        compiled with debug option on or off. 
-                        Possible values [on/off]. 
 configure -instdir    - Sets the location of the installation dir used when
                         executing make script with install target specified.
 configure -rebranding - ONLY FOR WINDOWS. Flag that determines if the project 
@@ -668,26 +665,32 @@ configure -version 3.3 -release 1 -jdkhome C:/jdk1.6 -instdir C:/JaWE</programli
 
       <para>Possible build targets for the make script are:</para>
 
-      <para><programlisting>make help           - Displays Help screen
-make buildAll       - Builds and configures TWE with javadoc and 
-                      docbook documentation
-make buildNoDoc     - Builds and configures TWE without javadoc and 
-                      docbook documentation
-make buildDoc       - Builds docbook documentation
-make dependencies   - Creates TWS and TAS dependencies within 
-                      distributions folder
-make dependency_tws - Creates TWS dependencies within distributions folder
-make dependency_tas - Creates TAS dependencies within distributions folder
-make install        - Installs and configures TWE into directory defined 
-                      by parameter install.dir in build.properties file. 
-                      This parameter can be set by using command: 
-                      configure -instdir PATH_TO_DIR.
-                      It should be called only after make buildAll target 
-                      is executed!
-make clean          - Removes the output and distribution folder (in order 
-                      to start a new compilation from scratch)
-make distributions  - Builds and configures TWE with all documentations 
-                      and creates distribution package
+      <para><programlisting>make help            - Displays Help screen
+make buildAll        - Builds and configures TWE with javadoc and 
+                       docbook documentation
+make buildAllDebug   - Builds and configures TXM with javadoc and 
+                       docbook documentation. The compiled classes have
+                       debug information.
+make buildNoDoc      - Builds and configures TWE without javadoc and 
+                       docbook documentation
+make buildNoDocDebug - Builds and configures TXM without javadoc and 
+                       docbook documentation. The compiled classes have
+                       debug information.
+make buildDoc        - Builds docbook documentation
+make dependencies    - Creates TWS and TAS dependencies within 
+                       distributions folder
+make dependency_tws  - Creates TWS dependencies within distributions folder
+make dependency_tas  - Creates TAS dependencies within distributions folder
+make install         - Installs and configures TWE into directory defined 
+                       by parameter install.dir in build.properties file. 
+                       This parameter can be set by using command: 
+                       configure -instdir PATH_TO_DIR.
+                       It should be called only after make buildAll target 
+                       is executed!
+make clean           - Removes the output and distribution folder (in order 
+                       to start a new compilation from scratch)
+make distributions   - Builds and configures TWE with all documentations 
+                       and creates distribution package
 </programlisting></para>
     </sect1>
 
@@ -9893,6 +9896,12 @@ XMLBasicPanel.SimplePanelTextHeight=20</programlisting>
 
         <listitem>
           <para>Added "silent" installation possibility</para>
+        </listitem>
+        <listitem>
+          <para>The build.debug property removed from build.properties file, new build targets introduced to build output with DEBUG information in the classes (buildNoDocDebug and buildAllDebug)</para>
+        </listitem>
+        <listitem>
+          <para>The project distribution now also contains debug binary output</para>
         </listitem>
       </itemizedlist>
     </section>
