@@ -27,7 +27,6 @@
 	<!--Set the global variables-->
 	<property name="version" value="2.3" />
 	<property name="release" value="1" />
-	<property name="build.debug" value="off" />
 
 	<property name="project.name" value="TWE" />
 	<property name="app.name" value="twe" />
@@ -148,6 +147,7 @@
 	<!-- Compiling of project                                                 -->
 	<!-- ==================================================================== -->
 	<target name="compile" depends="content">
+   <echo message="BD=${build.debug}"/>
 		<javac target="${targetVM}" source="${targetVM}" srcdir="${sources.dir}" destdir="${classes.dir}" classpathref="classpath" debug="${build.debug}" encoding="ISO-8859-1" />
 	</target>
 
@@ -377,5 +377,9 @@
 		</delete>
 	</target>
 
+	<target name="cleanClasses">
+		<delete dir="${classes.dir}" />
+	</target>
+   
 </project>
 
